# imagecnn

./: Cargo.toml  README.md
src/: data.rs  evaluate.rs  infer.rs  main.rs  model.rs  train.rs
